Set up user authentication with JWT (#21)
Set up user authentication by introducing new User class and authentication using tokens